change slide image path

--- a/Week-3/index.html
+++ b/Week-3/index.html
@@ -66,11 +66,11 @@
                 <h1 class="title-2">GALLERY</h1>
                 <div class="slider-photo">
                     <figure>
-                        <img src="/Week-1/assets/images/bmw-slide-1.jpg" alt="slide-1">
-                        <img src="/Week-1/assets/images/bmw-slide-2.jpg" alt="slide-2">
-                        <img src="/Week-1/assets/images/bmw-slide-3.jpg" alt="slide-3">
-                        <img src="/Week-1/assets/images/bmw-slide-4.jpg" alt="slide-4">
-                        <img src="/Week-1/assets/images/bmw-slide-1.jpg" alt="slide-1">
+                        <img src="./assets/images/bmw-slide-1.jpg" alt="slide-1">
+                        <img src="./assets/images/bmw-slide-2.jpg" alt="slide-2">
+                        <img src="./assets/images/bmw-slide-3.jpg" alt="slide-3">
+                        <img src="./assets/images/bmw-slide-4.jpg" alt="slide-4">
+                        <img src="./assets/images/bmw-slide-1.jpg" alt="slide-1">
                     </figure>
                 </div>
             </section>
