--- a/Week-3/index.html
+++ b/Week-3/index.html
@@ -27,7 +27,6 @@
                     <li><a class="text-menu" href="https://wa.me/08123456789">Contact</a></li>
                 </ul>
             </div>
-
             <!-- Hamburger button -->
             <div class="toggle-btn">
                 <button class="hamburger" onclick="burger(this)">
@@ -35,6 +34,10 @@
                     <div class="bar2"></div>
                     <div class="bar3"></div>
                 </button>
+            </div>
+
+            <div class="container-darkmode">
+                <div class="toggle"></div>
             </div>
         </nav>
     </header>
@@ -60,7 +63,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
             </iframe>
-
+            
             <!-- GALLERY BMW -->
             <section>
                 <h1 class="title-2">GALLERY</h1>
@@ -81,32 +84,32 @@
         <section class="popular-bmw">
             <div id="seri3" class="popular-card">
                 <img src="./assets/images/bmw-3-series.png" alt="bmw-3-series" class="bmw-series">
-                <p>BMW 3 Series</p>
+                <p class="test1">BMW 3 Series</p>
             </div>
 
             <div id="seri5" class="popular-card">
                 <img src="./assets/images/bmw-5-series.png" alt="bmw-5-series" class="bmw-series">
-                <p>BMW 5 Series</p>
+                <p class="test1">BMW 5 Series</p>
             </div>
 
             <div id="seri7" class="popular-card">
                 <img src="./assets/images/bmw-7-series.png" alt="bmw-7-series" class="bmw-series">
-                <p>BMW 7 Series</p>
+                <p class="test1">BMW 7 Series</p>
             </div>
 
             <div id="x1" class="popular-card">
                 <img src="./assets/images/bmw-x1-series.png" alt="bmw-x1" class="bmw-series">
-                <p>BMW X1</p>
+                <p class="test1">BMW X1</p>
             </div>
 
             <div id="x3" class="popular-card">
                 <img src="./assets/images/bmw-x3-series.png" alt="bmw-x3" class="bmw-series">
-                <p>BMW X3</p>
+                <p class="test1">BMW X3</p>
             </div>
 
             <div id="x5" class="popular-card">
                 <img src="./assets/images/bmw-x5-series.png" alt="bmw-x5" class="bmw-series">
-                <p>BMW X5</p>
+                <p class="text-bmw-series">BMW X5</p>
             </div>
         </section>
 
