add class dark for darkmode on section popular bmw

--- a/Week-3/index.html
+++ b/Week-3/index.html
@@ -84,32 +84,32 @@
         <section class="popular-bmw">
             <div id="seri3" class="popular-card">
                 <img src="./assets/images/bmw-3-series.png" alt="bmw-3-series" class="bmw-series">
-                <p class="test1">BMW 3 Series</p>
+                <p class="dark">BMW 3 Series</p>
             </div>
 
             <div id="seri5" class="popular-card">
                 <img src="./assets/images/bmw-5-series.png" alt="bmw-5-series" class="bmw-series">
-                <p class="test1">BMW 5 Series</p>
+                <p>BMW 5 Series</p>
             </div>
 
             <div id="seri7" class="popular-card">
                 <img src="./assets/images/bmw-7-series.png" alt="bmw-7-series" class="bmw-series">
-                <p class="test1">BMW 7 Series</p>
+                <p>BMW 7 Series</p>
             </div>
 
             <div id="x1" class="popular-card">
                 <img src="./assets/images/bmw-x1-series.png" alt="bmw-x1" class="bmw-series">
-                <p class="test1">BMW X1</p>
+                <p>BMW X1</p>
             </div>
 
             <div id="x3" class="popular-card">
                 <img src="./assets/images/bmw-x3-series.png" alt="bmw-x3" class="bmw-series">
-                <p class="test1">BMW X3</p>
+                <p>BMW X3</p>
             </div>
 
             <div id="x5" class="popular-card">
                 <img src="./assets/images/bmw-x5-series.png" alt="bmw-x5" class="bmw-series">
-                <p class="text-bmw-series">BMW X5</p>
+                <p>BMW X5</p>
             </div>
         </section>
 
