add responsive images with picture + source + srcset above section popular models

--- a/Week-3-4/index.html
+++ b/Week-3-4/index.html
@@ -78,6 +78,16 @@
                 </div>
             </section>
 
+            <!-- Best Seller -->
+            <section>
+                <h1 class="title-2">BEST SELLER</h1>
+                <picture>
+                    <source media="(min-width:800px)" srcset="./assets/images/Best-Seller-3.webp">
+                    <source media="(min-width:500px)" srcset="./assets/images/Best-Seller-1.webp">
+                    <img src="./assets/images/Best-Seller-2.jpg" alt="BMW 3 Series" style="width: -webkit-fill-available;">
+                  </picture>
+            </section>
+
             <!-- Popular Models Content -->
         </section>
         <h1 class="title-2">POPULAR MODELS</h1>
