add list of content with list

--- a/Week-3-4/index.html
+++ b/Week-3-4/index.html
@@ -64,6 +64,22 @@
                 allowfullscreen>
             </iframe>
 
+             <!-- List of Content -->
+             <section>
+                <h1 class="title-2">LIST OF CONTENT</h1>
+            </section>
+
+            <section class="container-list-content">
+                <ul class="wrapper-list-content">
+                    <li>Gallery</li>
+                    <li>Best Seller</li>
+                    <li>Popular modelsr</li>
+                    <li>Old Version</li>
+                    <li>New Version</li>
+                    <li>Register to Our Community</li>
+                </ul>
+            </section>
+
             <!-- GALLERY BMW -->
             <section>
                 <h1 class="title-2">GALLERY</h1>
@@ -81,11 +97,15 @@
             <!-- Best Seller -->
             <section>
                 <h1 class="title-2">BEST SELLER</h1>
+            </section>
+
+            <section>
                 <picture>
                     <source media="(min-width:800px)" srcset="./assets/images/Best-Seller-3.webp">
                     <source media="(min-width:500px)" srcset="./assets/images/Best-Seller-1.webp">
-                    <img src="./assets/images/Best-Seller-2.jpg" alt="BMW 3 Series" style="width: -webkit-fill-available;">
-                  </picture>
+                    <img src="./assets/images/Best-Seller-2.jpg" alt="BMW 3 Series"
+                        style="width: -webkit-fill-available;">
+                </picture>
             </section>
 
             <!-- Popular Models Content -->
